# fxscintilla

./: .cdtproject  .cvsignore  .project  ChangeLog  INSTALL  License.txt  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap  bootstrap.sh  configure  configure.ac  configure.in  cvs-timestamp  cvsenv  fxscintilla.pc.in  fxscintilla.spec  libtool  scintilla.kdevprj  sync-dist  tarball  untar-official
config/: acinclude.m4  acx_pthread.m4  mkinstalldirs
fox/: Makefile.am  ScintillaFOX.cxx
include/: FXScintilla.h  Makefile.am  Makefile.in
lexers/: Makefile.am
lexlib/: Makefile.am
ltdl/: .cvsignore  Makefile.am  Makefile.in
scintilla/: License.txt  Makefile.am  Makefile.in  README
scintilla/fox/: FXScintilla.h  Makefile.am  Makefile.in  PlatFOX.cxx  ScintillaFOX.cxx  deps.mak  makefile  scintilla.dsp  scintilla.mak
scintilla/gtk/: deps.mak  makefile
scintilla/include/: Makefile.am  Makefile.in  Platform.h
scintilla/src/: .cvsignore  ExternalLexer.h  KeyWords.cxx  LexMySQL.cxx  Makefile.am  Makefile.in  RESearch.cxx
scintilla/win32/: ScintRes.res
scite/: COPYING  License.txt  Makefile.am  Makefile.in  README
scite/fox/: DirectorExtension.cxx  DirectorExtension.h  Makefile.am  Makefile.in  SciTEFOX.cxx  deps.mak  makefile
scite/gtk/: makefile
scite/src/: Makefile.am  Makefile.in
scite/win32/: makefile
src/: .cvsignore  Makefile.am  Makefile.in  PlatFOX.cxx  ScintillaFOX.cxx  scintilla.dsw  scintilla.mak  version.h  version.h.in
test/: test.cpp  test.dsp
tests/: .cvsignore  Makefile.am  Makefile.in  test.cpp  test.rb
util/: Platform.h.patch  cleanup.sh  sci-update.sh
windows/vcpp/: win32.dsw
windows/vcpp/fxscintilla/: fxscintilla.dsp
windows/vcpp/fxscintilladll/: fxscintilladll.dsp
windows/vcpp/fxscintillanolexer/: fxscintillanolexer.dsp
windows/vcpp/fxscintillanolexerdll/: fxscintillanolexerdll.dsp
windows/vcpp/scintilla/: scintilla.dsp
windows/vcpp/test/: test.dsp
