ACLOCAL_AMFLAGS = -I m4
SUBDIRS = scintilla include src tests .

pkgconfigdir = $(libdir)/pkgconfig

pkgconfig_DATA = fxscintilla.pc

EXTRA_DIST = \
COPYRIGHTS \
bootstrap.sh \
m4 \
scintilla/License.txt \
scintilla/version.txt \
scintilla/include/Scintilla.iface \
scintilla/doc/ScintillaDoc.html \
util/Platform.h.patch \
util/cleanup.sh \
util/sci-update.sh
