ACLOCAL_AMFLAGS = -I m4
SUBDIRS = scintilla include fox tests .

pkgconfigdir = $(libdir)/pkgconfig

pkgconfig_DATA = fxscintilla.pc

EXTRA_DIST = \
COPYRIGHTS \
bootstrap.sh \
m4 \
License.txt \
version.txt \
include/Scintilla.iface \
doc/ScintillaDoc.html \
util/Platform.h.patch \
util/cleanup.sh \
util/sci-update.sh
