AC_INIT(src/ScintillaFOX.cxx)
AC_CONFIG_AUX_DIR(config)

dnl FXScintilla version
dnl TODO: handle libtool versioning information
AM_INIT_AUTOMAKE(fxscintilla, 1.45)

dnl Using libtool
AM_PROG_LIBTOOL

dnl Must have a C++ compiler
AC_PROG_CXX

dnl Versioning
dnl - FXScintilla versioning scheme
MAJOR_VERSION=1
MINOR_VERSION=45
PATCH_LEVEL=2
AC_SUBST(MAJOR_VERSION)
AC_SUBST(MINOR_VERSION)
AC_SUBST(PATCH_LEVEL)

dnl - Libtool versioning scheme
dnl   current:revision:age
dnl   . start with 0:0:0
dnl   . if the source code changed, then increment revision
dnl   . if any interface has been added, removed or changed, increment
dnl     current and set revision to 0
dnl   . if backward compatibility has been preserved, then increment age
dnl   . if backward compatibility has been broken, then set age to 0
LT_FXSCINTILLA_CURRENT=0
LT_FXSCINTILLA_REVISION=0
LT_FXSCINTILLA_AGE=0
AC_SUBST(LT_FXSCINTILLA_CURRENT)
AC_SUBST(LT_FXSCINTILLA_REVISION)
AC_SUBST(LT_FXSCINTILLA_AGE)

LT_SCILEXER_CURRENT=0
LT_SCILEXER_REVISION=0
LT_SCILEXER_AGE=0
AC_SUBST(LT_SCILEXER_CURRENT)
AC_SUBST(LT_SCILEXER_REVISION)
AC_SUBST(LT_SCILEXER_AGE)

dnl Check FOX library
CHECK_FOX(1, 0)

dnl Generated makefiles
AC_OUTPUT( \
	scintilla/src/Makefile \
	scintilla/Makefile \
	include/Makefile \
	src/Makefile \
	tests/Makefile \
	Makefile)
