SUBDIRS = src


noinst_HEADERS = \
    src/AutoComplete.h \
    src/CallTip.h \
    src/CellBuffer.h \
    src/CharClassify.h \
    src/CharacterSet.h \
    src/ContractionState.h \
    src/Decoration.h \
    src/Document.h \
    src/DocumentAccessor.h \
    src/Editor.h \
    src/ExternalLexer.h \
    src/Indicator.h \
    src/KeyMap.h \
    src/LineMarker.h \
    src/Partitioning.h \
    src/PerLine.h \
    src/PositionCache.h \
    src/RESearch.h \
    src/RunStyles.h \
    src/SVector.h \
    src/ScintillaBase.h \
    src/SplitVector.h \
    src/Style.h \
    src/StyleContext.h \
    src/UniConversion.h \
    src/ViewStyle.h \
    src/XPM.h \
    src/Selection.h \
    src/PropSetSimple.h

pkginclude_HEADERS = \
    include/Accessor.h \
    include/KeyWords.h \
    include/Platform.h \
    include/PropSet.h \
    include/ScintillaWidget.h \
    include/WindowAccessor.h

